--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
 <div class="container">
 	<div class="card">
 		<div class="card-header">
-			SHADOW ANTIBAN
+			SHADOW ANTIBAN - حماية الشادو
 		</div>
 		<div class="card-body">
 		  <p class="card-text">Best Anti-Cheats For Pubgm</p>
-			<a class="btn btn-xs btn-primary" href="depictions/?p=com.aledany1.ig">More info</a>
+			<a class="btn btn-xs btn-primary" href="depictions/?p=com.aledany1.ig">More info - المزيد من المعلومات</a>
 		</div>
 	</div>
 	<div class="card">
 		<div class="card-header">
-			SHADOW ESP
+			SHADOW ESP - رادار الشادو 
 		</div>
 		<div class="card-body">
 		  <p class="card-text">Best ESP For Pubgm</p>
-		  <a class="btn btn-xs btn-primary" href="depictions/?p=com.aledanyy1.ig">More info</a>
+		  <a class="btn btn-xs btn-primary" href="depictions/?p=com.aledanyy1.ig">More info - المزيد من المعلومات</a>
 		</div>
 	</div>
 
