--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="card">
 		<div class="card-body">
 			<p><span class="text-primary"><b>Shadow</span></b> is a Cydia repository template.</p>
-			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://Aledany001.github.io/Aledany/">Add to Cydia</a>
+			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://Aledany001.github.io/Aledany/">Add to Cydia - أضف الى السيديا</a>
 		</div>
 	</div>
 </div>
