--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		<div class="card-body">
 			<p><span class="text-primary"><b>Shadow</span></b> is a Cydia repository template.</p>
 			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://Aledany001.github.io/Aledany/">Add to Cydia - أضف الى السيديا</a>
-		        <a class="btn btn-sm btn-primary" href="cydia://source/https://akusio.github.io/api/share#?source=https://Aledany001.github.io/Aledany/">Add to Cydia - أضف الى السيديا</a>
+		       
+ <a class="btn btn-sm btn-primary" href="sileo://source/https://akusio.github.io/api/share#?source=https://Aledany001.github.io/Aledany/">Add to Sileo - أضف الى سيلو</a>
             </div>
 	</div>
 </div>
