--- a/index.html
+++ b/index.html
@@ -1,55 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html lang="ja">
 <head>
-  <title>SHADOW TEAM</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="depictions/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="user-scalable=yes" content="width=device-width, initial-scale=1">
+<meta name="apple-mobile-web-app-capable" content="yes">
+
+<title>akusio repo</title>
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<div class="container">
-	<h1><img src="CydiaIcon.png">👻SHADOW👻</h1>
+<h1>akusio repo</h1>
+
+<div id="MainMenu" class="MainMenu">
+	
+	<div class="buttons">
+
+	<button type="button" class="btn-square cydia" onclick="location.href='cydia://url/https://cydia.saurik.com/api/share#?source=https://aledany1.com/'">Cydia</button>
+  
+  <button type="button" class="btn-square sileo" onclick="location.href='sileo://source/https://aledany1.com/'">Sileo</button>
+  
+  <button type="button" class="btn-square zebra" onclick="location.href='zbra://sources/add/https://aledany1.com'">Zebra</button>
+	
+	</div>
+	
 </div>
 
-<div class="container">
-	<div class="card">
-		<div class="card-body">
-			<p><span class="text-primary"><b>Shadow</span></b> is a Cydia repository template.</p>
-			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://Aledany001.github.io/Aledany/">Add to Cydia - أضف الى السيديا</a>
-		       
- <a class="btn btn-sm btn-primary" href="sileo://source/https://akusio.github.io/api/share#?source=https://Aledany001.github.io/Aledany/">Add to Sileo - أضف الى سيلو</a>
-            </div>
+<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Developer</h1>
+
+<div id="Developer" class="MainMenu">
+	
+	<div class="buttons">
+		
+		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://twitter.com/aledanykr'">Twitter</button>
+		<!--
+		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://paypal.me/akusiorr'">Donate</button>
+		-->
+		
+		
 	</div>
-</div>
-<p></p>
-<div class="container">
-  <h3 id="wells" class="page-header">🔥Our Packages🔥</h3>
+	
 </div>
 
-<div class="container">
-	<div class="card">
-		<div class="card-header">
-			SHADOW ANTIBAN - حماية الشادو
-		</div>
-		<div class="card-body">
-		  <p class="card-text">Best Anti-Cheats For Pubgm</p>
-			<a class="btn btn-xs btn-primary" href="depictions/?p=com.aledany1.ig">More info - المزيد من المعلومات</a>
-		</div>
-	</div>
-	<div class="card">
-		<div class="card-header">
-			SHADOW ESP - رادار الشادو 
-		</div>
-		<div class="card-body">
-		  <p class="card-text">Best ESP For Pubgm</p>
-		  <a class="btn btn-xs btn-primary" href="depictions/?p=com.aledanyy1.ig">More info - المزيد من المعلومات</a>
-		</div>
-	</div>
+
+
+
+<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Packages</h1>
+
+<div id="Packages" class="MainMenu">
+
+<div class="packages" id="packages">
+
+	<h2>Empty</h2>
+	<hr>
+	<p></p>
+	
 
 </div>
+</div>
+<div id="padding_bottom" style="height:500px;">
+</div>
+
 
 </body>
 </html>
