--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 	
 	<div class="buttons">
 		
-		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://twitter.com/aledanykr'">Twitter</button>
+		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://Instagram.com/hussain_aledany7'">Instagram</button>
 		<!--
-		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://paypal.me/akusiorr'">Donate</button>
+		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://paypal.me/Aledany7'">Donate</button>
 		-->
 		
 		
