--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="user-scalable=yes" content="width=device-width, initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 
-<title>SHADOW REPO</title>
+<title>SHADOW TEAM</title>
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 
 <body>
 
-<h1>akusio repo</h1>
+<h1>SHADOW REPO</h1>
 
 <div id="MainMenu" class="MainMenu">
 	
