--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="user-scalable=yes" content="width=device-width, initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 
-<title>SHADOW TEAM</title>
+<title>ASTON TEAM</title>
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 
 <body>
 
-<h1>Shadow repo</h1>
+<h1>ASTON repo</h1>
 
 <div id="MainMenu" class="MainMenu">
 	
@@ -49,27 +49,3 @@
 
 
 
-<h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Packages</h1>
-
-<div id="Packages" class="MainMenu">
-
-<div class="packages" id="packages">
-
-	<h2>SHADOW ANTIBAN</h2>
-	<h2>SHADOW ESP</h2>
-<hr>
-
-<a class="btn btn-xs btn-primary" href="depictions/?p=com.aledany1.ig">More info - المزيد من المعلومات</a>
-		</div>
-
-	<p></p>
-	
-
-</div>
-</div>
-<div id="padding_bottom" style="height:500px;">
-</div>
-
-
-</body>
-</html>
