--- a/index.html
+++ b/index.html
@@ -17,35 +17,36 @@
 <h1>ASTON repo</h1>
 
 <div id="MainMenu" class="MainMenu">
-	
+
 	<div class="buttons">
 
 	<button type="button" class="btn-square cydia" onclick="location.href='cydia://url/https://cydia.saurik.com/api/share#?source=https://aledany1.com/'">Cydia</button>
-  
+
   <button type="button" class="btn-square sileo" onclick="location.href='sileo://source/https://aledany1.com/'">Sileo</button>
-  
+
   <button type="button" class="btn-square zebra" onclick="location.href='zbra://sources/add/https://aledany1.com'">Zebra</button>
-	
+
 	</div>
-	
+
 </div>
 
 <h1 style="padding-top: 200px; margin-bottom: 100px; font-size:70px">Developer</h1>
 
 <div id="Developer" class="MainMenu">
-	
+
 	<div class="buttons">
-		
-		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://Instagram.com/hussain_aledany7'">Instagram</button>
+
+		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#071ff2" onclick="location.href='https://Instagram.com/hussain_aledany7'">Instagram</button>
 		<!--
 		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://paypal.me/Aledany7'">Donate</button>
 		-->
-		
-		
+
+
 	</div>
-	
-</div>
 
+<div class="buttons">
 
-
-
+	<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#6507f2" onclick="location.href='https://t.me/Aledany'">Telegram</button>
+	<!--
+	<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://paypal.me/Aledany7'">Donate</button>
+	-->
