--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<div class="buttons">
 
-		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#071ff2" onclick="location.href='https://Instagram.com/hussain_aledany7'">Instagram</button>
+		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#000000" onclick="location.href='https://Instagram.com/hussain_aledany7'">Instagram</button>
 		<!--
 		<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://paypal.me/Aledany7'">Donate</button>
 		-->
@@ -46,7 +46,7 @@
 
 <div class="buttons">
 
-	<button type="button" class="btn-square" style="background: linear-gradient(135deg, #387fff, #387fff 20%,  #d7d7d7 21%, #d7d7d7); color:#6507f2" onclick="location.href='https://t.me/Aledany'">Telegram</button>
+	<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#000000" onclick="location.href='https://t.me/Aledany'">Telegram</button>
 	<!--
 	<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://paypal.me/Aledany7'">Donate</button>
 	-->
