--- a/depictions/index.html
+++ b/depictions/index.html
@@ -80,7 +80,7 @@
 <div id="packageError" style="display:none">
 	<div class="container">
     <div class="alert alert-success">
-		<strong>Great !</strong> The package you are trying to view is hosted on this repository.
+		<strong>Great !</strong> The package you are trying to view is Supported.
 	  </div>
 	</div>
 </div>
