--- a/index.html
+++ b/index.html
@@ -50,3 +50,50 @@
 	<!--
 	<button type="button" class="btn-square" style="background: linear-gradient(135deg, #0d2977, #0d2977 20%,  #d7d7d7 21%, #d7d7d7); color:#181818" onclick="location.href='https://paypal.me/Aledany7'">Donate</button>
 	-->
+
+	<br>
+
+
+
+	              <div class="player">
+	                <video class="player__video viewer" poster="images/zenin.gif" src="https://zenin.io/2.MP4"></video>
+
+	                <div class="player__controls">
+	                  <div class="progress">
+	                   <div class="progress__filled">
+	        </div>
+	                  </div>
+	                  <button class="player__button toggle" title="Toggle Play">►</button>
+	                </div>
+	              </div>
+
+
+
+
+
+
+
+	      </div>
+
+
+	      <!-- Endng Application Center -->
+	      </div>
+	    </main>
+	    <!-- End Support -->
+
+	    <!-- Start Footer -->
+	    <footer class="background-color-black ">
+	      <p style="text-align: center;">Copyright © 2019<script>new Date().getFullYear()>2017&&document.write("-"+new Date().getFullYear());</script> Aledany All rights reserved.</p>
+	    </footer>
+	    </div>
+	    <!-- End Footer -->
+	    <script src="js/dist-ionicons.js"></script>
+	    <script src="js/player.js"></script>
+	    <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+	    <script src="js/jquery-2.2.4.min.js"></script>
+	    <script src="js/bootstrap.min.js"></script>
+	    <script src="js/morphext.min.js"></script>
+	    <script src="js/wow.min.js"></script>
+	    <script src="js/custom.min.js"></script>
+	  </body>
+	</html>
