--- a/depictions/index.html
+++ b/depictions/index.html
@@ -25,7 +25,7 @@
 			contentBlocks,
 			() => {
                 $("#packageError").show();
-				$("#packageInformation").hide();
+				$("#packageInformation").hide();				
 			},
 			(xml) => {
 				document.title = $(xml).find("package>name").text();
@@ -79,8 +79,8 @@
 </div>
 <div id="packageError" style="display:none">
 	<div class="container">
-    <div class="alert alert-success">
-		<strong>Great !</strong> The package you are trying to view is Supported.
+	  <div class="alert alert-danger">
+		<strong>Oh snap!</strong> The package you are trying to view is not hosted on this repository.
 	  </div>
 	</div>
 </div>
