--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
 	<div class="buttons">
 
-	<button type="button" class="btn-square cydia" onclick="location.href='cydia://url/https://cydia.saurik.com/api/share#?source=https://aston-jailbreak.pro/'">Cydia</button>
+	<button type="button" class="btn-square cydia" onclick="location.href='cydia://url/https://cydia.saurik.com/api/share#?source=http://aston-jailbreak.pro/'">Cydia</button>
 
-  <button type="button" class="btn-square sileo" onclick="location.href='sileo://source/https://aston-jailbreak.pro/'">Sileo</button>
+  <button type="button" class="btn-square sileo" onclick="location.href='sileo://source/http://aston-jailbreak.pro/'">Sileo</button>
 
-  <button type="button" class="btn-square zebra" onclick="location.href='zbra://sources/add/https://aston-jailbreak.pro'">Zebra</button>
+  <button type="button" class="btn-square zebra" onclick="location.href='zbra://sources/add/http://aston-jailbreak.pro'">Zebra</button>
 
 	</div>
 
